# futures-rustls

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yml
src/: client.rs  lib.rs  server.rs
src/common/: handshake.rs  mod.rs  test_stream.rs
tests/: badssl.rs  early-data.rs  test.rs
