[package]
name = "futures-rustls"
version = "0.22.2"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/quininer/futures-rustls"
homepage = "https://github.com/quininer/futures-rustls"
documentation = "https://docs.rs/futures-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for futures using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2018"

[dependencies]
futures-io = "0.3"
rustls = "0.21"

[features]
early-data = []
dangerous_configuration = ["rustls/dangerous_configuration"]

[dev-dependencies]
smol = "1"
futures-util = { version = "0.3.1", features = [ "io" ] }
lazy_static = "1"
rustls-pemfile = "1"
webpki-roots = "0.23"
webpki = { version = "0.100", package = "rustls-webpki" }
