[package]
name = "futures-rustls"
version = "0.25.0"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/quininer/futures-rustls"
homepage = "https://github.com/quininer/futures-rustls"
documentation = "https://docs.rs/futures-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for futures using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2018"

[dependencies]
futures-io = "0.3"
rustls = "0.22"
pki-types = { package = "rustls-pki-types", version = "1" }

[features]
early-data = []

[dev-dependencies]
smol = "1"
futures-util = { version = "0.3.1", features = [ "io" ] }
lazy_static = "1"
rustls-pemfile = "2"
webpki-roots = "0.26"
webpki = { version = "0.102", package = "rustls-webpki" }
