[package]
name = "futures-rustls"
version = "0.25.1"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/quininer/futures-rustls"
homepage = "https://github.com/quininer/futures-rustls"
documentation = "https://docs.rs/futures-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for futures using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2018"

[dependencies]
futures-io = "0.3"
rustls = { version = "0.23", default-features = false, features = ["std"] }
pki-types = { package = "rustls-pki-types", version = "1" }

[features]
default = ["aws-lc-rs", "tls12", "logging"]
aws-lc-rs = ["rustls/aws_lc_rs"]
aws_lc_rs = ["aws-lc-rs"]
early-data = []
fips = ["rustls/fips"]
logging = ["rustls/logging"]
ring = ["rustls/ring"]
tls12 = ["rustls/tls12"]

[dev-dependencies]
smol = "1"
futures-util = { version = "0.3.1", features = [ "io" ] }
lazy_static = "1"
rustls-pemfile = "2"
webpki-roots = "0.26"
webpki = { version = "0.102", package = "rustls-webpki", default-features = false }
